# Simple-ML

./: README.md  main.py  matrix.py  pyproject.toml  requirements.txt  vector.py
core/: vector.py
simpleML/: main.py
simpleML.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
simpleML/core/: exceptions.py  matrix.py  vector.py
simpleML/losses/: losses.py
simpleML/models/: __init__.py  base.py  linear_regression.py  logistic_regression.py  softmax_regression.py
simpleML/optim/: __init__.py  base.py  gd.py  gradient_descent.py  line_search.py  newton_raphson.py
simpleML/tests/: test_gradient_descent.py  test_linear_regression.py  test_logistic_regression.py  test_logistic_regression_l2.py  test_logistic_regression_nm.py  test_losses.py  test_matrix.py  test_newton_raphson.py  test_vector.py
simpleML/utils/: one_hot_encoding.py
